seer-core/tests/snapshots/format_snapshots__markdown_dig_local_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
expression: markdown ().format_dig (& fixture_dig_local())
---
## DNS PTR Records: 1.0.0.127.in-addr.arpa

- **Status**: `NOERROR`
- **Server**: none
- **Query time**: 0 ms

*Answered locally, not by a server: a special-use name (RFC 6761) that the resolver answers itself*

### Answer

| Name | TTL | Type | Data |
| --- | --- | --- | --- |
| `1.0.0.127.in-addr.arpa` | 86400 | PTR | `localhost.` |

> Note: DNS responses are not DNSSEC-validated.
