seer-core/tests/snapshots/format_snapshots__markdown_dig_nodata_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
assertion_line: 1374
expression: markdown ().format_dig (& fixture_dig_nodata())
---
## DNS AAAA Records: www.seer.test

- **Status**: `NOERROR`
- **Flags**: `qr rd ra`
- **Server**: default
- **Query time**: 12 ms

*No AAAA records (NODATA — the name exists)*

### Authority

| Name | TTL | Type | Data |
| --- | --- | --- | --- |
| `seer.test` | 900 | SOA | `ns1.seer.test. hostmaster.seer.test. 2026092801 7200 3600 1209600 900` |

> Note: DNS responses are not DNSSEC-validated.
