seer-core/tests/snapshots/format_snapshots__markdown_dig_nxdomain_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
assertion_line: 1374
expression: markdown ().format_dig (& fixture_dig_nxdomain())
---
## DNS A Records: gone.seer.test

- **Status**: `NXDOMAIN`
- **Flags**: `qr rd ra`
- **Server**: default
- **Query time**: 31 ms

*Name does not exist (NXDOMAIN)*

### Authority

| Name | TTL | Type | Data |
| --- | --- | --- | --- |
| `seer.test` | 900 | SOA | `ns1.seer.test. hostmaster.seer.test. 2026092801 7200 3600 1209600 900` |

> Note: DNS responses are not DNSSEC-validated.
