seer-core/tests/snapshots/format_snapshots__markdown_dns_comparison_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
expression: markdown ().format_dns_comparison (& fixture_dns_comparison())
---
## DNS Comparison: example.com A

**Result**: Records differ

### Server A (8.8.8.8)

**Status**: NOERROR

**CNAME chain**: `example.com → edge.cdn.test.`

| Record |
| --- |
| `192.0.2.1` |

### Server B (1.1.1.1)

**Error**: query timed out

### Comparison

- **Common**: *(none)*
- **Only in 8.8.8.8**: `192.0.2.1`
- **Only in 1.1.1.1**: *(none)*
