seer-core/tests/snapshots/format_snapshots__markdown_dns_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
assertion_line: 163
expression: markdown().format_dns(&fixture_dns_records())
---
## DNS ANY Records: example.com

| Name | TTL | Type | Data |
| --- | --- | --- | --- |
| `example.com` | 3600 | A | `93.184.216.34` |
| `example.com` | 1800 | MX | `10 mail.example.com` |
| `www.example.com` | 300 | CNAME | `example.com` |

> Note: DNS responses are not DNSSEC-validated.
